# rustler_logimap

./: .gitignore  README.md  mix.exs
config/: config.exs
lib/: LogisticMap.ex  logi.ex
native/logisticmap/: Cargo.toml  README.md
native/logisticmap/src/: build.rs  lib.rs
native/logisticmap/src/c/: logimap.c
test/: logi_test.exs
