[package]
name = "logisticmap"
version = "0.1.0"
authors = []
links = "logimap"  # for C link
build = "src/build.rs" # for C link

[lib]
name = "logisticmap"
path = "src/lib.rs"
crate-type = ["dylib"]
libc = "0.2.0"     # for C link

[dependencies]
rustler = "0.16.0"
rustler_codegen = "0.16.0"
lazy_static = "0.2"

[build-dependencies]
gcc = "0.3"        # for C link
libc = "0.2"
